# pretalx

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTORS  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  data.json  endpoint.json  justfile  pyproject.toml  tox.ini  uv.lock.license
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_idea.yml
.github/workflows/: build.yml  coverage.yml  docs.yml  frontend.yml  python-version.txt.license  strings.yml  style.yml  tests.yml
.github/workflows/matchers/: black.json.license
LICENSES/: LicenseRef-Pretalx-AGPL-3.0-Terms.txt
_build/: backend.py
assets/: translate.svg.license
doc/: Makefile  changelog.rst  conf.py  contents.rst  funding.rst  requirements.txt  spelling_wordlist.txt  spelling_wordlist.txt.license  support.rst
doc/_extensions/: changelog.py
doc/_static/: redoc.standalone.js  redoc.standalone.js.license  rest.js
doc/_templates/: index.html
doc/_themes/pretalx_theme/: __init__.py  footer.html  header.html  layout.html  search.html  theme.conf.license
doc/administrator/: commands.rst  configure.rst  index.rst  installation.rst  installation_docker.rst  installation_pip.rst  maintenance.rst  simple_docker.rst
doc/api/: changelog.rst  fundamentals.rst  index.rst  resources.rst  schema.yml  schema.yml.license
doc/api/resources/: speakers.rst  submissions.rst  talks.rst
doc/developer/: concepts.rst  contributing.rst  conventions.rst  index.rst  setup.rst
doc/developer/architecture/: concepts.rst  index.rst  structure.rst  testing.rst
doc/developer/contributing/: code.rst  codeofconduct.rst  index.rst  translating.rst
doc/developer/interfaces/: index.rst  models.rst  signals.rst
doc/developer/plugins/: authentication.rst  customview.rst  exporter.rst  general.rst  index.rst  plugins.rst  recording.rst
doc/developer/policy/: codeofconduct.rst  index.rst
doc/install/: simple_docker.rst
doc/legal/: browser-support.rst  cookies.rst  gdpr.rst  index.rst  licensing.rst  release-cycle.rst  security.rst
doc/maintainer/: release.rst
doc/user/: cfp.rst  emails.rst  faq.rst  index.rst  markdown.rst  organisers.rst  review-assignments.json.license  review.rst  schedule.rst  sessions.rst
doc/user/event/: widget.rst
docker/: pretalx.bash
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_01e73918f74cba5d_admin_py.html  z_01e73918f74cba5d_cfp_py.html  z_01e73918f74cba5d_feedback_py.html  z_01e73918f74cba5d_mail_py.html  z_01e73918f74cba5d_organiser_py.html  z_01e73918f74cba5d_schedule_py.html  z_01e73918f74cba5d_speaker_py.html  z_01e73918f74cba5d_submission_py.html  z_022f156c3d458d2d_console_py.html  z_022f156c3d458d2d_css_py.html  z_022f156c3d458d2d_daterange_py.html  z_022f156c3d458d2d_path_py.html  z_022f156c3d458d2d_phrases_py.html  z_022f156c3d458d2d_serialize_py.html  z_03cff31c1062d0f9_test_event_model_py.html  z_03cff31c1062d0f9_test_event_services_py.html  z_03cff31c1062d0f9_test_event_stages_py.html  z_03cff31c1062d0f9_test_event_utils_py.html  z_05c98f99342004f7_i18n_py.html  z_05f70042892adc34_create_test_event_py.html  z_05f70042892adc34_init_py.html  z_05f70042892adc34_makemessages_py.html  z_05f70042892adc34_makemigrations_py.html  z_05f70042892adc34_migrate_py.html  z_05f70042892adc34_move_event_py.html  z_05f70042892adc34_rebuild_py.html  z_05f70042892adc34_runperiodic_py.html  z_05f70042892adc34_shell_py.html  z_05f70042892adc34_spectacular_py.html  z_05f70042892adc34_update_translation_percentages_py.html  z_072c692d5375a47a_test_admin_py.html  z_072c692d5375a47a_test_auth_py.html  z_072c692d5375a47a_test_cards_py.html  z_072c692d5375a47a_test_cfp_py.html  z_072c692d5375a47a_test_dashboard_py.html  z_072c692d5375a47a_test_event_py.html  (+966 more)
src/: manage.py  pretalx.example.cfg  pretalx.example.cfg.license  setup.cfg  setup.py
src/pretalx/: __init__.py  __main__.py  _build.py  celery_app.py  settings.py  urls.py  wsgi.py
src/pretalx/agenda/: apps.py  context_processors.py  html_export.py  permissions.py  phrases.py  recording.py  rules.py  signals.py  tasks.py  urls.py
src/pretalx/api/: apps.py  auth.py  documentation.py  exceptions.py  mixins.py  pagination.py  permissions.py  shims.py  urls.py  versions.py
src/pretalx/cfp/: apps.py  flow.py  forms.py  permissions.py  phrases.py  signals.py  urls.py  workflow.py
src/pretalx/common/: __init__.py  apps.py  auth.py  cache.py  checks.py  console.py  context_processors.py  db.py  diff_utils.py  exceptions.py  exporter.py  files.py  fonts.py  image.py  language.py  log.py  log_display.py  mail.py  phrases.py  plugins.py  serialize.py  signals.py  tables.py  tasks.py  ui.py  update_check.py  urls.py  utils.py  validators.py  views.py
src/pretalx/event/: actions.py  apps.py  forms.py  receivers.py  rules.py  services.py  signals.py  stages.py  tasks.py  utils.py
src/pretalx/frontend/: package-lock.json  package.json  vite.config.js
src/pretalx/locale/: django.pot  django.pot.license  translation_percentages.json  translation_percentages.json.license
src/pretalx/mail/: apps.py  context.py  default_templates.py  enums.py  models.py  placeholders.py  receivers.py  rules.py  signals.py  smtp.py  tasks.py  template_phrases.py  validators.py
src/pretalx/orga/: apps.py  context_processors.py  permissions.py  phrases.py  receivers.py  rules.py  signals.py  urls.py
src/pretalx/person/: adapters.py  apps.py  exporters.py  forms.py  receivers.py  rules.py  services.py  signals.py  tasks.py  validators.py
src/pretalx/schedule/: apps.py  ascii.py  enums.py  exporters.py  forms.py  ical.py  notifications.py  phrases.py  receivers.py  services.py  signals.py  tasks.py  utils.py
src/pretalx/submission/: apps.py  cards.py  enums.py  exporters.py  icons.py  (+7 more)
src/requirements/: production.txt
src/tests/: __init__.py  ci_postgres.cfg.license  conftest.py  dummy_app.py  dummy_signals.py  screenshots.ini  urls.py  utils.py
tools/: check_plc0415_reasons.py
(+1757 files in other folders)
